add handlers for get specify resources
