# api/src/openapi.rs
@@ -5,14 +5,17 @@ use utoipa::OpenApi;
 #[openapi(
   paths(
     routes::galaxy::get_all_galaxies,
+    routes::galaxy::get_galaxy,
     routes::galaxy::create_galaxy,
     routes::galaxy::update_galaxy,
     routes::galaxy::delete_galaxy,
     routes::star::get_all_stars,
+    routes::star::get_star,
     routes::star::create_star,
     routes::star::update_star,
     routes::star::delete_star,
     routes::planet::get_all_planets,
+    routes::planet::get_planet,
     routes::planet::create_planet,
     routes::planet::update_planet,
     routes::planet::delete_planet,
@@ -36,14 +39,17 @@ use utoipa::OpenApi;
       error::ValidationResponse,
       error::InternalErrorResponse,
       routes::galaxy::GalaxiesList,
+      routes::galaxy::SpecificGalaxy,
       routes::galaxy::GalaxyCreated,
       routes::galaxy::GalaxyUpdated,
       routes::galaxy::GalaxyDeleted,
       routes::star::StarsList,
+      routes::star::SpecificStar,
       routes::star::StarCreated,
       routes::star::StarUpdated,
       routes::star::StarDeleted,
       routes::planet::PlanetsList,
+      routes::planet::SpecificPlanet,
       routes::planet::PlanetCreated,
       routes::planet::PlanetUpdated,
       routes::planet::PlanetDeleted,
